Ajout du Positional_Encoding, deuxieme etape d'un Transformer

--- a/01_embeddings.ipynb
+++ b/01_embeddings.ipynb
@@ -12,54 +12,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "ff35c84d",
+   "execution_count": 5,
+   "id": "6324beca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Embedding:\n",
-    "    def __init__(self, vocab_size, d_model):\n",
-    "        self.vocab_size = vocab_size\n",
-    "        self.d_model = d_model\n",
-    "        self.weights = np.random.randn(vocab_size, d_model) * .01\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        # x : indices of shape (seq_len,)\n",
-    "        return self.weights[x]"
+    "np.random.seed(42)  # pour reproductibilité"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "6324beca",
+   "execution_count": 6,
+   "id": "c070e509",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exemple : vocabulaire simple\n",
+    "vocab = [\"I\", \"love\", \"JY\", \"AI\"]\n",
+    "vocab_size = len(vocab)\n",
+    "d_model = 8  # dimension des embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e3c2f01f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialisation aléatoire des embeddings\n",
+    "embeddings = np.random.randn(vocab_size, d_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ee81a90f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Mapping mot -> embedding\n",
+    "word_to_idx = {word: i for i, word in enumerate(vocab)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "283e6e3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fonction utilitaire pour transformer une phrase en embeddings\n",
+    "def encode_sentence(sentence):\n",
+    "    \"\"\"\n",
+    "    Converts a list of words into a matrix of embeddings\n",
+    "    sentence : list of str\n",
+    "    return : numpy array of shape (len(sentence), d_model)\n",
+    "    \"\"\"\n",
+    "    idxs = [word_to_idx[word] for word in sentence]\n",
+    "    return embeddings[idxs]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "348d342e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4, 16)\n"
+      "Encoded sentence shape: (3, 8)\n",
+      "[[ 0.49671415 -0.1382643   0.64768854  1.52302986 -0.23415337 -0.23413696\n",
+      "   1.57921282  0.76743473]\n",
+      " [-0.46947439  0.54256004 -0.46341769 -0.46572975  0.24196227 -1.91328024\n",
+      "  -1.72491783 -0.56228753]\n",
+      " [-0.54438272  0.11092259 -1.15099358  0.37569802 -0.60063869 -0.29169375\n",
+      "  -0.60170661  1.85227818]]\n"
      ]
     }
    ],
    "source": [
-    "## TEST RAPIDE AVEC INDICES FICTIFS\n",
-    "\n",
-    "vocab_size = 10\n",
-    "d_model = 16\n",
-    "x = np.array([1, 3, 2, 5])\n",
-    "embed = Embedding(vocab_size, d_model)\n",
-    "out = embed.forward(x)\n",
-    "print(out.shape)"
+    "# Test\n",
+    "sentence = [\"I\", \"love\", \"AI\"]\n",
+    "encoded = encode_sentence(sentence)\n",
+    "print(\"Encoded sentence shape:\", encoded.shape)\n",
+    "print(encoded)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c070e509",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
