--- a/02_positional_encoding.ipynb
+++ b/02_positional_encoding.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "e0cf2047",
+   "execution_count": 16,
+   "id": "b0f988f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "e0cf2047",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Positional Encoding\n",
+    "def positional_encoding(seq_len, d_model):\n",
+    "    \"\"\"\n",
+    "    Returns a matrix of shape (seq_len, d_model)\n",
+    "    With sinusoidal positional encodings\n",
+    "    \"\"\"\n",
+    "    PE = np.zeros((seq_len, d_model))\n",
+    "    for pos in range(seq_len):\n",
+    "        for i in range(0, d_model, 2):\n",
+    "            PE[pos, i] = np.sin(pos / (10000 ** (i / d_model)))\n",
+    "            if i+1 < d_model:\n",
+    "                PE[pos, i+1] = np.cos(pos / (10000 ** (i / d_model)))\n",
+    "    return PE\n",
+    "\n",
+    "seq_len = 5\n",
+    "d_model = 6\n",
+    "PE = positional_encoding(seq_len, d_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "e45b0437",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "positional encoding shape : (5, 6)\n",
+      "[[ 0.          1.          0.          1.          0.          1.        ]\n",
+      " [ 0.84147098  0.54030231  0.04639922  0.99892298  0.00215443  0.99999768]\n",
+      " [ 0.90929743 -0.41614684  0.0926985   0.99569422  0.00430886  0.99999072]\n",
+      " [ 0.14112001 -0.9899925   0.1387981   0.9903207   0.00646326  0.99997911]\n",
+      " [-0.7568025  -0.65364362  0.18459872  0.98281398  0.00861763  0.99996287]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"positional encoding shape :\", PE.shape)\n",
+    "print(PE)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "042a421b",
+   "id": "52a29079",
    "metadata": {},
    "outputs": [],
    "source": []
