Ajout du module 3 : Attention et test config HTTPS

--- a/03_attention.ipynb
+++ b/03_attention.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "db70a322",
    "metadata": {},
    "outputs": [],
@@ -16,14 +16,51 @@
    "id": "089803e8",
    "metadata": {},
    "source": [
-    "### Implementer le forward pass de la scaled dot-product attention et verifier numeriquement qu'il fonctionne."
+    "## Implementer le forward pass de la scaled dot-product attention et verifier numeriquement qu'il fonctionne."
    ]
   },
   {
    "cell_type": "markdown",
    "id": "2bdf7943",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Section 1 - Rappel mathematique\n",
+    "- Q, K, V\n",
+    "- Formule\n",
+    "- Dimension attendue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6cbe527",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def softmax(x):\n",
+    "    \"\"\"\n",
+    "    Numerically stable softmax along last axis\n",
+    "    \"\"\"\n",
+    "    x = x - np.max(x, axis=-1, keepdims=True)\n",
+    "    exp_x = np.exp(x)\n",
+    "    return exp_x / np.sum(exp_x, axis=-1, keepdims=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc5fe356",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def scaled_dot_product_attention(Q, K, V):\n",
+    "    \"\"\"\n",
+    "    Compute scaled dot-product attention\n",
+    "    Q, K, V : numpy arrays of shape (seq_len, d_model)\n",
+    "    return: output, attention weights\n",
+    "    \"\"\"\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
