Ajout du module 3 : Attention et test config HTTPS

--- a/03_attention.ipynb
+++ b/03_attention.ipynb
@@ -2,13 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "db70a322",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "np.random.seed(42)"
+    "np.random.seed(42)\n",
+    "\n",
+    "#hyperparams globaux + config\n",
+    "d_model = 8\n",
+    "seq_len = 3"
    ]
   },
   {
@@ -20,26 +24,45 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "2bdf7943",
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "c806fce6",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q shape: (3, 8)\n",
+      "K shape: (3, 8)\n",
+      "V shape: (3, 8)\n"
+     ]
+    }
+   ],
    "source": [
-    "### Section 1 - Rappel mathematique\n",
-    "- Q, K, V\n",
-    "- Formule\n",
-    "- Dimension attendue"
+    "# Toy data\n",
+    "\n",
+    "Q = np.random.randn(seq_len, d_model)\n",
+    "K = np.random.randn(seq_len, d_model)\n",
+    "V = np.random.randn(seq_len, d_model)\n",
+    "\n",
+    "print(\"Q shape:\", Q.shape)\n",
+    "print(\"K shape:\", K.shape)\n",
+    "print(\"V shape:\", V.shape)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d6cbe527",
+   "execution_count": 28,
+   "id": "e4e4fb0e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Softmax\n",
+    "\n",
     "def softmax(x):\n",
     "    \"\"\"\n",
-    "    Numerically stable softmax along last axis\n",
+    "    Softmax stable numériquement, appliqué sur la dernière dimension\n",
     "    \"\"\"\n",
     "    x = x - np.max(x, axis=-1, keepdims=True)\n",
     "    exp_x = np.exp(x)\n",
@@ -48,19 +71,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fc5fe356",
+   "execution_count": 30,
+   "id": "7065beec",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# scaled_dot_product_attention\n",
+    "\n",
     "def scaled_dot_product_attention(Q, K, V):\n",
     "    \"\"\"\n",
-    "    Compute scaled dot-product attention\n",
-    "    Q, K, V : numpy arrays of shape (seq_len, d_model)\n",
-    "    return: output, attention weights\n",
+    "    Implémentation correcte de la scaled dot-product attention\n",
+    "\n",
+    "    Q, K, V : numpy arrays de shape (seq_len, d_model)\n",
+    "\n",
+    "    Returns:\n",
+    "    - output : (seq_len, d_model)\n",
+    "    - attention_weights : (seq_len, seq_len)\n",
     "    \"\"\"\n",
-    "    "
+    "\n",
+    "    # Vérif de sécu \n",
+    "    assert isinstance(Q, np.ndarray)\n",
+    "    assert isinstance(K, np.ndarray)\n",
+    "    assert isinstance(V, np.ndarray)\n",
+    "    assert Q.ndim == 2 and K.ndim == 2 and V.ndim == 2\n",
+    "    assert Q.shape == K.shape == V.shape\n",
+    "\n",
+    "    d_k = Q.shape[-1]\n",
+    "\n",
+    "    # 1. Scores d'attention\n",
+    "    scores = np.matmul(Q, K.T) / np.sqrt(d_k)\n",
+    "\n",
+    "    # 2. Softmax\n",
+    "    attention_weights = softmax(scores)\n",
+    "\n",
+    "    # 3. Agregation pondérée\n",
+    "    output = np.matmul(attention_weights, V)\n",
+    "\n",
+    "    return output, attention_weights\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "327d47af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output shape: (3, 8)\n",
+      "Attention weights shape: (3, 3)\n",
+      "\n",
+      "Attention weights:\n",
+      " [[0.41298391 0.14580592 0.44121017]\n",
+      " [0.14356952 0.70892628 0.1475042 ]\n",
+      " [0.20032974 0.6737001  0.12597016]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test\n",
+    "\n",
+    "output, attention = scaled_dot_product_attention(Q, K, V)\n",
+    "\n",
+    "print(\"Output shape:\", output.shape)\n",
+    "print(\"Attention weights shape:\", attention.shape)\n",
+    "print(\"\\nAttention weights:\\n\", attention)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fec3ba81",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
